# pv-site-datamodel

./: .all-contributorsrc  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  datamodel.dbml  pvsite.dbml  pvsite.sql  pyproject.toml  requirements.txt
.github/workflows/: branch_ci.yml  generate-ddl.yml  linters.yml  main_ci.yml  publish-docs.yml  publish-sdk-python.yml  sdk-python-ci.yml  sdk-python-pytest.yml  test-sdk-python.yml
alembic/: README.md  dbd25dac7107_site_to_location.py  env.py
alembic/versions/: 08e6fd83f6da_add_history_table.py  12c0ccf6b825_create_trigger.py  12c0ccf6b826_location_create_trigger.py  2a6e6975cd72_remove_uniqueness_from_ml_id_for_site_.py  2ad22925d16f_add_horizon_column.py  2c4f7a98a591_solve_issues_active_flag_to_sites_166_.py  31d501a0aa52_add_client_table.py  34891d466985_add_ml_models_table.py  352bb7f31b06_add_site_asset_type.py  35f53a88b8c3_add_inverter_table_to_store_inverters_.py  37336000d584_change_horizon_minute_type_to_nullable.py  3c765af43b5a_add_client_user_relationship.py  42f8f283e2c9_set_nullable_of_horizon_minute_to_false_.py  4e1eb8b4e7f2_.py  5056573aea0d_add_description_column_to_mlmodelsql.py  575f99caf2d4_comments.py  575f99caf2d4_solve_issues_active_flag_to_sites_166_.py  5ca6efb386e8_add_owner_column_to_site_model.py  6aa3e123ea5a_add_n_n_locations_relationship.py  7731b672d8ae_fix_migration.py  7a32241916f7_solve_issues_active_flag_to_sites_166_.py  81278a3571b2_add_probabilistic_values_column_to_.py  8384de6b7c50_add_support_for_differing_inverter_and_.py  92172b9903cc_solve_issues_active_flag_to_sites_166_.py  976c33d240d0_.py  98a8d572897f_extending_character_limit_on_.py  9df605a0d04f_fix_migration.py  YYYY_add_curtailments_table  aeea08bcfc42_use_multi_column_indexes.py  bbdbcedc6b24_set_horizon_minute_nullable.py  c5faca90552c_fix_migration.py  c7aef501056e_remove_client_add_user_and_sitegroup.py  c8ef88c250e7_site_history_table.py  cf883321098c_make_horizon_minutes_non_nullable.py  d5c9e13a8b66_add_ml_models_to_site_table.py  d60cb99ff9e6_add_api_request_table.py  dbd25dac7107_site_to_location.py  ea0672033541_add_service_level_to_site_group.py  ee514b583fa3_solve_issues_active_flag_to_sites_166_.py  fa74fbe945fd_add_description_column_to_mlmodelsql.py  (+1 more)
examples/: usage_example.py
pv-datamodel/: models.py
pvsite_datamodel/: __init__.py  connection.py  pydantic_models.py  sqlmodels.py
pvsite_datamodel/api/: __init__.py  curtailment.py
pvsite_datamodel/read/: __init__.py  client.py  curtailment.py  generation.py  latest_forecast_values.py  model.py  site.py  status.py  user.py
pvsite_datamodel/write/: __init__.py  client.py  curtailment.py  database.py  forecast.py  generation.py  user_and_site.py  utils.py
pvsite_datamodel/write/data/: dno.py  gsp.py  utils.py
scripts/: add_all_sites_to_user.py  add_dno.py  add_gsp.py  database.py  download_dno_gsp.py  make_sql_sqlalchemy.py  make_sqlalchmey.sh
sdk/pvsite-python/: connection.py  db_test.py  read.py  requirements.txt  schema.py  setup.py  test_write.py  write.py
sdk/pvsite-python/tests/: conftest.py
sdk/python/: .bumpversion.cfg  Makefile  README.md  Readme.md  pyproject.toml  requirements.txt  setup.py  test-docker-compose.yml
sdk/python/alembic/versions/: 830bec1172a8_add_timestamp_utc_column_to_forecasts_.py  aeea08bcfc42_use_multi_column_indexes.py
sdk/python/infrastructure/: Dockerfile  test-docker-compose.yml
sdk/python/pvsite-datamodel/: __version__.py
sdk/python/pvsite_datamodel/: __init__.py  read.py  schema.py  sqlmodels.py  test_write.py  write.py
sdk/python/pvsite_datamodel/migrations/: README.md  alembic.ini  app.py
sdk/python/pvsite_datamodel/migrations/db/: env.py
sdk/python/pvsite_datamodel/migrations/db/versions/: 2ae476a753ae_.py  4e1eb8b4e7f2_.py  976c33d240d0_.py
sdk/python/pvsite_datamodel/read/: __init__.py  generation.py  latest_forecast_values.py  site.py  status.py  utils.py
sdk/python/pvsite_datamodel/write/: __init__.py  datetime_intervals.py  forecast.py  generation.py  upsert.py  utils.py
sdk/python/scripts/: add_dno.py  make_map_data.py
sdk/python/tests/: conftest.py  test_connection.py  test_queries.py  test_read.py  test_write.py
sql/: pvdatamodel.sql
src/pvsite_datamodel/: __init__.py  connection.py  management.py  pydantic_models.py  site_group.py  sqlmodels.py
src/pvsite_datamodel/read/: __init__.py  client.py  details.py  forecast.py  forecast_value.py  generation.py  latest_forecast_values.py  model.py  site.py  site_group.py  status.py  user.py
src/pvsite_datamodel/write/: __init__.py  client.py  database.py  forecast.py  generation.py  site_group.py  user_and_site.py  utils.py
src/pvsite_datamodel/write/data/: dno.py  gsp.py  utils.py
tests/: conftest.py  test_alembic.py  test_connection.py  test_delete.py  test_management.py  test_models.py  test_queries.py  test_read.py  test_site_group.py  test_write.py
tests/api/: test_curtailment.py
tests/read/: test_curtailment.py  test_details.py  test_forecast_curtailment.py  test_get_api_requests.py  test_get_client.py  test_get_forecast.py  test_get_forecast_values.py  test_get_generation.py  test_get_latest_forecast_values.py  test_get_latest_status.py  test_get_sites.py  test_get_user_by_email.py  test_read_models.py
tests/write/: test_api.py  test_client.py  test_curtailment.py  test_forecast.py  test_generation.py  test_site.py  test_user.py  test_write.py
