[tool.poetry]
name = "pvsite-datamodel"
version = "1.0.35"
description = "SDK for interacting with the PVSite database"
authors = ["Open Climate Fix"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
sqlalchemy = "2.0"
psycopg2-binary = "2.9.9"
pandas = "2.2.2"
pydantic = "2.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.3"
pytest = "8.3.2"
testcontainers = "4.8.1"
black = "24.8.0"
isort = "5.13.2"
pytest-cov = "5.0.0"
alembic = "1.13.2"
geopandas = "1.0.1"

[project.urls]
"GitHub" = "https://github.com/openclimatefix/pvsite-datamodel"


[tool.mypy]
python_version = "3.10"
plugins = [
    "sqlalchemy.ext.mypy.plugin",
]
exclude = [
    "^gen/*$", # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[tool.ruff]
select = [
    "E", # pycodestyle
    "W", # newline at end of files
    "F", # pyflakes
    "N", # pep8 naming
    "B", # flake8-bugbear
    # We install isort separately because we want to use the profile="black" option
    # "I", # isosort
    "D", # pydocstyle
    "S", # flake8-bandit
    "T20", # flake8-print
    "PT" # flake8-print
]
fixable = ['E']
line-length = 100
ignore = ["D203", "D213", "D200" ,"D202", "D210", "D212", "D415", "D105"]
exclude = ["__init__.py"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"tests/*" = ["S101", "D", "PT004", "PT012"]
"setup.py" = ["D100"]
"alembic/versions/*" = ["D"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
