[build-system]
requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "pvsite-datamodel"
dynamic = [ "version" ]
description = "SDK for interacting with the PVSite database"
authors = [{ name = "Open Climate Fix team", email = "info@openclimatefix.org" }]
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9.5,<3.0",
    "pandas>=2.2.3,<3.0",
    "pydantic>=2.3.0,<3.0",
    "alembic>=1.16.4",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "testcontainers",
    "black",
    "isort",
    "pytest-cov",
    "alembic",
    "geopandas"
]

[project.urls]
repository = "https://github.com/openclimatefix/pvsite-datamodel"

[tool.setuptools.packages.find]
where = ["pvsite_datamodel"]
exclude = ["test*"]

[tool.mypy]
python_version = "3.10"
plugins = [
    "sqlalchemy.ext.mypy.plugin",
]
exclude = [
    "^gen/*$", # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[tool.ruff]
select = [
    "E", # pycodestyle
    "W", # newline at end of files
    "F", # pyflakes
    "N", # pep8 naming
    "B", # flake8-bugbear
    # We install isort separately because we want to use the profile="black" option
    # "I", # isosort
    "D", # pydocstyle
    "S", # flake8-bandit
    "T20", # flake8-print
    "PT" # flake8-print
]
fixable = ['E']
line-length = 100
ignore = ["D203", "D213", "D200" ,"D202", "D210", "D212", "D415", "D105"]
exclude = ["__init__.py"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"tests/*" = ["S101", "D", "PT004", "PT012"]
"setup.py" = ["D100"]
"alembic/versions/*" = ["D"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

